input/files/examples/errors/JavaExampleError001.java
package errors;

public clas JavaExampleError001 {
	
}